apps/03/backend/services/infra/k8s/posts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl # naming  convention
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts # Help it to find specs
  template:
    metadata:
      labels:
        app: posts
    # pod spec
    spec:
      containers:
      - name: posts
        image: kate/posts:0.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
