apps/03/backend/services/infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl # naming  convention
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts # Help it to find specs
  template:
    metadata:
      labels:
        app: posts
    # pod spec
    spec:
      containers:
      - name: posts
        image: dockeridohyeah/posts:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"

---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  selector:
    app: posts
  ports:
  - port: 4000
    targetPort: 4000
