apps/03/backend/services/infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app: posts
  ports:
    - name: ports
      protocol: TCP
      port: 4000
      # targetPort is the port exposed by a port
      targetPort: 4000
