apps/03/backend/services/infra/k8s/query-deply.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
      - name: query
        image: dockeridohyeah/query:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"

---
apiVersion: v1
kind: Service
metadata:
  name: query
spec:
  selector:
    app: query 
  ports:
  - port: 4001
    targetPort: 4001
