apps/03/backend/services/infra/k8s/ingress-srv.yaml
# https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/#basic-usage-host-based-routing
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: myservicea.foo.org
    http:
      paths:
      - path: /posts
        backend:
          serviceName: posts-clusterip-srv
          servicePort: 4000
